# tiger

./: .gitignore  CHANGELOG.md  README.md  stack.yaml  tiger.cabal
app/: Main.hs
src/: Tiger.hs
src/Chapter1/: BinarySearchTree.hs  Interpreter.hs  TreeMap.hs
